[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/thief_controller/scripts/player/player.gd" type="Script" id=1]
[ext_resource path="res://addons/jm_pp_outlines/jm_pp_outlines_camera.gd" type="Script" id=2]
[ext_resource path="res://addons/thief_controller/scripts/player/player_audio.gd" type="Script" id=3]
[ext_resource path="res://addons/thief_controller/scripts/player/player_sound_emitter.gd" type="Script" id=4]
[ext_resource path="res://addons/thief_controller/scripts/player/player_camera.gd" type="Script" id=5]
[ext_resource path="res://addons/thief_controller/prefabs/LightDetector.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[node name="Player" type="KinematicBody" groups=["player"]]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
script = ExtResource( 1 )
jump_force = 0.0
interact_distance = 1.0

[node name="Collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shape = SubResource( 1 )

[node name="SurfaceDetector" type="RayCast" parent="."]
enabled = true

[node name="LightDetector" parent="." instance=ExtResource( 7 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 3.84615, 0, 0, 0 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1000, 600 )
transparent_bg = true
hdr = false
render_target_v_flip = true

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.624744, 0 )
cull_mask = 4

[node name="Camera" type="Camera" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 3.84615, 0, 2.5, 0 )
cull_mask = 1048569
current = true
script = ExtResource( 5 )
maxRoll = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]

[node name="PlayerUI" type="Control" parent="Camera/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="Camera/CanvasLayer/PlayerUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0

[node name="LightIndicator" type="ProgressBar" parent="Camera/CanvasLayer/PlayerUI"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_right = 126.0
margin_bottom = 40.0
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ZoomOverlay" type="TextureRect" parent="Camera/CanvasLayer/PlayerUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite" type="Sprite" parent="Camera/CanvasLayer/PlayerUI"]
position = Vector2( 512, 300.993 )
scale = Vector2( 1.024, 0.996689 )
texture = SubResource( 2 )

[node name="FrobCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
script = ExtResource( 3 )

[node name="SoundEmitter" type="Area" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="SoundEmitter"]

[node name="PPOutlinesCamera" type="Camera" parent="."]
script = ExtResource( 2 )

[node name="CamTween" type="Tween" parent="."]
